[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "listbee"
version = "0.9.0"
description = "Official Python SDK for the ListBee API — one API call to sell and deliver digital content."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ListBee", email = "damian@listbee.so" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://listbee.so"
Documentation = "https://docs.listbee.so"
Repository = "https://github.com/listbee-dev/listbee-python"
Changelog = "https://github.com/listbee-dev/listbee-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest-cov>=5.0",
    "pre-commit>=4.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/listbee"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
